test/compile_errors/err_issue65_fstring_enum_float_spec.w
//! expect-check-fail: format mode requires float type
enum Token { Text(str) | End }

fn main:
    let tok = Token.End
    print(f"{tok:f}")
